@@ -1,5 +1,10 @@
 2002-10-11  Martin Baulig  <martin@gnome.org>
 
+	* glib/ListBase.cs (ListBase.Append): New public method.
+	(ListBase.Prepend): New public method.
+
+2002-10-11  Martin Baulig  <martin@gnome.org>
+
 	* glib/FileUtils.cs: New file.  Wrapped g_file_get_contents() here.
 
 2002-10-10  Mike Kestner <mkestner@speakeasy.net>
